--- a/android_integration/app/src/main/AndroidManifest.xml
+++ b/android_integration/app/src/main/AndroidManifest.xml
@@ -35,5 +35,15 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+
+        <activity
+            android:name=".MeetingSummaryActivity"
+            android:exported="false"
+            android:parentActivityName=".MainActivity"
+            android:label="@string/meeting_summary">
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value=".MainActivity" />
+        </activity>
     </application>
 </manifest>
